# dserver

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
tests/: health_check.rs
